# dwelleo-assistant

./: README.md  evaluation_results.json  main.py  pyproject.toml
app/: agent.py  evaluate.py  main.py  prompts.py  rag.py  tools.py
chroma_db/: chroma.sqlite3
knowledge_base/: 01_pricing_and_plans.md  02_how_to_list_property.md  03_ai_price_prediction.md  04_ai_listing_scoring.md  05_wallet_credits.md  06_supported_regions.md  07_login_troubleshooting.md  08_refund_policy.md  09_contact_support.md  10_integrations_crm.md
